# aoc2024-ksplang

./: .gitignore  README.md  WASM.md  annotated.txt  annotated_readable.txt  annotated_readable2.txt  annotated_readable3.txt  annotools.sh  settings.gradle.kts
aoc25/rust/: Cargo.toml  build-all.sh
aoc25/rust/.cargo/: config.toml
aoc25/rust/aoc25-1/: Cargo.toml
aoc25/rust/aoc25-1-1/: Cargo.toml
aoc25/rust/aoc25-1-2/: Cargo.toml
aoc25/rust/aoc25-1-2/src/: lib.rs
aoc25/rust/aoc25-1/src/: lib.rs
aoc25/rust/aoc25-2-1/: Cargo.toml
aoc25/rust/aoc25-2-1/src/: lib.rs
aoc25/rust/aoc25-2-2/: Cargo.toml
aoc25/rust/aoc25-2-2/src/: lib.rs
aoc25/rust/aoc25-3-1/: Cargo.toml
aoc25/rust/aoc25-3-1/src/: lib.rs
aoc25/rust/aoc25-3-2/: Cargo.toml
aoc25/rust/aoc25-3-2/src/: lib.rs
aoc25/rust/aoc25-4-1/: Cargo.toml
aoc25/rust/aoc25-4-1/src/: lib.rs
aoc25/rust/aoc25-4-2/: Cargo.toml
aoc25/rust/aoc25-4-2/src/: lib.rs
aoc25/rust/aoc25-5-1/: Cargo.toml
aoc25/rust/aoc25-5-1/src/: lib.rs
aoc25/rust/aoc25-5-2/: Cargo.toml
aoc25/rust/aoc25-5-2/src/: lib.rs
aoc25/rust/aoc25-6-1/: Cargo.toml
aoc25/rust/aoc25-6-1/src/: lib.rs
aoc25/rust/aoc25-6-2/: Cargo.toml
aoc25/rust/aoc25-6-2/src/: lib.rs
aoc25/rust/aoc25-7-1/: Cargo.toml
aoc25/rust/aoc25-7-1/src/: lib.rs
aoc25/rust/aoc25-7-2/: Cargo.toml
aoc25/rust/wasm/: aoc25_1.wasm  aoc25_1_1.wasm  aoc25_1_2.wasm  aoc25_2_1.wasm  aoc25_2_2.wasm  aoc25_3_1.wasm  aoc25_3_2.wasm  aoc25_4_1.wasm  aoc25_4_2.wasm  aoc25_5_1.wasm  aoc25_5_2.wasm  aoc25_6_1.wasm  aoc25_6_2.wasm  aoc25_7_1.wasm  aoc25_7_2.wasm
(+189 files in other folders)
