[workspace]
resolver = "3"
members = [
    "common",
    "aoc25-1-1",
    "aoc25-1-2",
    "aoc25-2-1",
    "aoc25-2-2",
    "aoc25-3-1",
    "aoc25-3-2",
    "aoc25-4-1",
    "aoc25-4-2",
    "aoc25-5-1",
    "aoc25-5-2",
    "aoc25-6-1",
#    "aoc25-6-2",
#    "aoc25-7-1",
#    "aoc25-7-2",
#    "aoc25-8-1",
#    "aoc25-8-2",
#    "aoc25-9-1",
#    "aoc25-9-2",
#    "aoc25-10-1",
#    "aoc25-10-2",
#    "aoc25-11-1",
#    "aoc25-11-2",
#    "aoc25-12-1",
#    "aoc25-12-2",
]

# This is actually super important in our usecase.
# Thanks to this, we can avoid the use of WASM memory at all when calling functions from the common module.
# Without it, parameters would be passed via WASM memory - we don't want that at all, if we can avoid it completely,
# we can omit it altogether in the ksplang runtime.
[profile.release]
lto = "fat"
panic = "abort"
